test_files/invalid/030-true-as-identifier.man
def main()
    Int true
end
